// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Planet component renders correctly with alternate props 1`] = `
<div
  className="planet planet-3"
  id="planet"
  onClick={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 205, 155, 0.5)",
      "boxShadow": "0 0 1rem rgba(255, 205, 155, 0.5)",
      "color": "#000000",
    }
  }
>
  Saturn
</div>
`;

exports[`Planet component renders correctly with default props 1`] = `
<div
  className="planet planet-2"
  id="planet"
  onClick={undefined}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "boxShadow": undefined,
      "color": "#FFFFFF",
    }
  }
/>
`;
